fix (home page): background image not fitting correctly, change (buttons): icon color on hover changed to white

--- a/inkstone-app/src/components/button/InvertedButton.scss
+++ b/inkstone-app/src/components/button/InvertedButton.scss
@@ -12,5 +12,8 @@
     &:hover {
         background-color: $highlight-purple;
         color: $pure-white;
+        g {
+            fill: $pure-white;
+        }
     }
 }
