--- a/inkstone-app/src/pages/home/Home.scss
+++ b/inkstone-app/src/pages/home/Home.scss
@@ -18,6 +18,7 @@
             z-index: 0;
             left: 0;
             height: 100%;
+            width: 100%;
             max-width: 100%;
             object-fit: cover;
             opacity: 0.7;
